Refatoração e atualização da documentação da API:
- Movido o método getProductsByStore para GetProductsByStoreController e ajustado para aceitar o storeId diretamente.
- Adicionada documentação Swagger (OpenAPI) no GetProductsByStoreController.
- Removida documentação redundante do ProductController.
- Atualizado o GetProductsByStoreService para aceitar storeId em vez de GetProductsByStoreRequest.
- Alterado o relacionamento products() no modelo Store de belongsToMany para hasMany.
- Adicionado o método stocks() no modelo Store para obter os estoques dos produtos da loja.
- Atualizadas as rotas no arquivo api.php, adicionando rotas para obter estoque por loja e por produto específico.
- Atualizada a documentação da API (api-docs.json) para refletir as novas rotas e alterações nos endpoints.
