# app/Http/Controllers/ProductController.php
@@ -131,79 +131,5 @@ class ProductController extends Controller
 
     }
 
-    /**
-     * @OA\Get(
-     *     path="/api/products/by-store/{store}",
-     *     summary="Obtém produtos associados a uma loja específica",
-     *     description="Busca produtos associados a uma loja específica e retorna uma lista formatada de produtos.",
-     *     tags={"Produtos"},
-     *     @OA\Parameter(
-     *         name="store",
-     *         in="path",
-     *         description="ID da loja para a qual os produtos devem ser buscados.",
-     *         required=true,
-     *         @OA\Schema(
-     *             type="integer"
-     *         )
-     *     ),
-     *     @OA\Response(
-     *         response=200,
-     *         description="Lista de produtos associados à loja",
-     *         @OA\JsonContent(
-     *             type="object",
-     *             @OA\Property(
-     *                 property="store",
-     *                 type="integer",
-     *                 description="ID da loja para a qual os produtos foram buscados."
-     *             ),
-     *             @OA\Property(
-     *                 property="products",
-     *                 type="array",
-     *                 @OA\Items(
-     *                     type="object",
-     *                     @OA\Property(
-     *                         property="id",
-     *                         type="integer",
-     *                         description="ID do produto"
-     *                     ),
-     *                     @OA\Property(
-     *                         property="title",
-     *                         type="string",
-     *                         description="Título do produto"
-     *                     ),
-     *                     @OA\Property(
-     *                         property="price",
-     *                         type="string",
-     *                         description="Preço do produto"
-     *                     ),
-     *                     @OA\Property(
-     *                         property="promotionalPrice",
-     *                         type="integer",
-     *                         description="Preço promocional do produto"
-     *                     ),
-     *                     @OA\Property(
-     *                         property="image",
-     *                         type="string",
-     *                         description="URL da imagem do produto"
-     *                     )
-     *                 )
-     *             )
-     *         )
-     *     ),
-     *     @OA\Response(
-     *         response=400,
-     *         description="Erro de solicitação",
-     *         @OA\JsonContent(
-     *             type="object",
-     *             @OA\Property(
-     *                 property="error",
-     *                 type="string",
-     *                 description="Descrição do erro"
-     *             )
-     *         )
-     *     )
-     * )
-     */
-
 
 }
